--- a/examples_settings.yaml
+++ b/examples_settings.yaml
@@ -76,5 +76,12 @@ RAC:
   Login: ""         # Не обязательный параметр
   Pass: ""          # Не обязательный параметр
 
+Pushgateway: # Обязательный параметр
+  Enable: true
+  URL: "http://localhost:8000"
+  Interval: 30
+  GroupingLabel: "instance"
+  GroupingValue: "example instance"
+
 LogDir:        # Если на задан логи будут писаться в каталог с исполняемым файлом
 LogLevel:  5   # Уровень логирования от 2 до 5, где 2 - ошибка, 3 - предупреждение, 4 - информация, 5 - дебаг
